--- a/index.html
+++ b/index.html
@@ -2,51 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | [Challenge Name Here]</title>
 </head>
 <body>
 
-  Our Pricing
-  Annually
-  Monthly
+  <div class="wrapper">
+    <header>
+      <h1>Our Pricing</h1>
+      <div id="toggle">
+        <input type="radio" id="annually" name="billing" value="annually">
+        <label for="annually">Annually</label>
+        <input type="radio" id="monthly" name="billing" value="monthly">
+        <label for="monthly">Monthly</label><br>
+      </div>
+    </header>
 
-  Basic
-  &dollar;19.99
-  &dollar;199.99
-  500 GB Storage
-  2 Users Allowed
-  Send up to 3 GB
-  Learn More
+    <main>
+      <div class="card">
+        <h2>Basic</h2>
+        <div class="price">
+          <p class="monthly">&dollar;19.99</p>
+          <p class="annually">&dollar;199.99</p>
+        </div>
+        <div class="features">
+          <ul>
+            <li>500 GB Storage</li>
+            <li>2 Users Allowed</li>
+            <li>Send up to 3 GB</li>
+          </ul>
+        </div>
+        <button>Learn More</button>
+      </div>
 
-  Professional
-  &dollar;24.99
-  &dollar;249.99
-  1 TB Storage
-  5 Users Allowed
-  Send up to 10 GB
-  Learn More
+      <div class="card">
+        <h2>Professional</h2>
+        <div class="price">
+          <p class="monthly">&dollar;24.99</p>
+          <p class="annually">&dollar;249.99</p>
+        </div>
+        <div class="features">
+          <ul>
+            <li>1 TB Storage</li>
+            <li>5 Users Allowed</li>
+            <li>Send up to 10 GB</li>
+          </ul>
+        </div>
+        <button>Learn More</button>
+      </div>
 
-  Master
-  &dollar;39.99
-  &dollar;399.99
-  2 TB Storage
-  10 Users Allowed
-  Send up to 20 GB
-  Learn More
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <div class="card">
+        <h2>Master</h2>
+        <div class="price">
+          <p class="monthly">&dollar;39.99</p>
+          <p class="annually">&dollar;399.99</p>
+        </div>
+        <div class="features">
+          <ul>
+            <li>2 TB Storage</li>
+            <li>10 Users Allowed</li>
+            <li>Send up to 20 GB</li>
+          </ul>
+        </div>
+        <button>Learn More</button>
+      </div>
+
+    </main>
+
   </div>
+
 </body>
 </html>
