Mobile styling (no toggle)

--- a/index.html
+++ b/index.html
@@ -27,48 +27,42 @@
       <div class="card">
         <h2>Basic</h2>
         <div class="price">
-          <p class="monthly">&dollar;19.99</p>
-          <p class="annually">&dollar;199.99</p>
+          <p class="monthly"><span class="currency">&dollar;</span>19.99</p>
+          <p class="annually"><span class="currency">&dollar;</span>199.99</p>
         </div>
-        <div class="features">
-          <ul>
-            <li>500 GB Storage</li>
-            <li>2 Users Allowed</li>
-            <li>Send up to 3 GB</li>
-          </ul>
-        </div>
+        <ul class="features">
+          <li>500 GB Storage</li>
+          <li>2 Users Allowed</li>
+          <li>Send up to 3 GB</li>
+        </ul>
         <button>Learn More</button>
       </div>
 
-      <div class="card">
+      <div class="card highlight">
         <h2>Professional</h2>
         <div class="price">
-          <p class="monthly">&dollar;24.99</p>
-          <p class="annually">&dollar;249.99</p>
+          <p class="monthly"><span class="currency">&dollar;</span>24.99</p>
+          <p class="annually"><span class="currency">&dollar;</span>249.99</p>
         </div>
-        <div class="features">
-          <ul>
-            <li>1 TB Storage</li>
-            <li>5 Users Allowed</li>
-            <li>Send up to 10 GB</li>
-          </ul>
-        </div>
+        <ul class="features">
+          <li>1 TB Storage</li>
+          <li>5 Users Allowed</li>
+          <li>Send up to 10 GB</li>
+        </ul>
         <button>Learn More</button>
       </div>
 
       <div class="card">
         <h2>Master</h2>
         <div class="price">
-          <p class="monthly">&dollar;39.99</p>
-          <p class="annually">&dollar;399.99</p>
+          <p class="monthly"><span class="currency">&dollar;</span>39.99</p>
+          <p class="annually"><span class="currency">&dollar;</span>399.99</p>
         </div>
-        <div class="features">
-          <ul>
-            <li>2 TB Storage</li>
-            <li>10 Users Allowed</li>
-            <li>Send up to 20 GB</li>
-          </ul>
-        </div>
+        <ul class="features">
+          <li>2 TB Storage</li>
+          <li>10 Users Allowed</li>
+          <li>Send up to 20 GB</li>
+        </ul>
         <button>Learn More</button>
       </div>
 
