--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
   <div class="wrapper">
     <header>
       <h1>Our Pricing</h1>
-      <div id="toggle">
-        <input type="radio" id="annually" name="billing" value="annually">
+      <fieldset id="toggle">
+        <legend>Billing period</legend>
+        <input type="radio" id="annually" name="billing" value="annually" checked>
         <label for="annually">Annually</label>
+        <span class="switch"> </span>
         <input type="radio" id="monthly" name="billing" value="monthly">
-        <label for="monthly">Monthly</label><br>
-      </div>
+        <label for="monthly">Monthly</label>
+      </fieldset>
     </header>
 
     <main>
       <div class="card">
         <h2>Basic</h2>
         <div class="price">
-          <p class="monthly"><span class="currency">&dollar;</span>19.99</p>
+          <p class="monthly hide"><span class="currency">&dollar;</span>19.99</p>
           <p class="annually"><span class="currency">&dollar;</span>199.99</p>
         </div>
         <ul class="features">
@@ -41,7 +43,7 @@
       <div class="card highlight">
         <h2>Professional</h2>
         <div class="price">
-          <p class="monthly"><span class="currency">&dollar;</span>24.99</p>
+          <p class="monthly hide"><span class="currency">&dollar;</span>24.99</p>
           <p class="annually"><span class="currency">&dollar;</span>249.99</p>
         </div>
         <ul class="features">
@@ -55,7 +57,7 @@
       <div class="card">
         <h2>Master</h2>
         <div class="price">
-          <p class="monthly"><span class="currency">&dollar;</span>39.99</p>
+          <p class="monthly hide"><span class="currency">&dollar;</span>39.99</p>
           <p class="annually"><span class="currency">&dollar;</span>399.99</p>
         </div>
         <ul class="features">
@@ -69,6 +71,9 @@
     </main>
 
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="./js/toggle.js"></script>
 
 </body>
 </html>
