Code readability and accessibility fixes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <legend>Billing period</legend>
         <input type="radio" id="annually" name="billing" value="annually" checked>
         <label for="annually">Annually</label>
-        <span class="switch"> </span>
+        <span class="switch" tabindex="0" onkeydown="keypress(event)"> </span>
         <input type="radio" id="monthly" name="billing" value="monthly">
         <label for="monthly">Monthly</label>
       </fieldset>
